--- a/omni_blocks/templates/blocks/link_block.html
+++ b/omni_blocks/templates/blocks/link_block.html
@@ -1,5 +1,9 @@
+{% spaceless %}
 {% if self.external_url %}
     {{ self.external_url }}
-{% else %}
+{% elif self.internal_url %}
     {{ self.internal_url.url }}
+{% else %}
+    {{ self }}
 {% endif %}
+{% endspaceless %}
