--- a/omni_blocks/templates/blocks/basic_card_block.html
+++ b/omni_blocks/templates/blocks/basic_card_block.html
@@ -1,8 +1,9 @@
+{% load wagtailcore_tags %}
 {% load wagtailimages_tags %}
 
 <section class="card">
     <header class="card_header">
-      <a href="{{ self.link }}">{{ self.title }}</a>
+      <a href="{% include_block self.link %}">{{ self.title }}</a>
     </header>
 
     {% if self.image %}
