Updating other templates which use LinkBlock to use include_block, adding tests

--- a/omni_blocks/templates/blocks/button_block.html
+++ b/omni_blocks/templates/blocks/button_block.html
@@ -1,3 +1,4 @@
-<p class='button'>
-    <a href='{{ value.link }}'>{{ value.title }}</a>
+{% load wagtailcore_tags %}
+<p class="button">
+    <a href="{% include_block value.link %}">{{ value.title }}</a>
 </p>
