--- a/omni_blocks/templates/blocks/titled_link_block.html
+++ b/omni_blocks/templates/blocks/titled_link_block.html
@@ -1,1 +1,2 @@
-<a href="{{ self.link }}">{{ self.title }}</a>
+{% load wagtailcore_tags %}
+<a href="{% include_block self.link %}">{{ self.title }}</a>
