--- a/omni_blocks/templates/blocks/linked_image_block.html
+++ b/omni_blocks/templates/blocks/linked_image_block.html
@@ -1,3 +1,3 @@
-{% load wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags %}
 
-<a href="{{ self.link }}">{% image self.image height-600 class="card_image" %}</a>
+<a href="{% include_block self.link %}">{% image self.image height-600 class="card_image" %}</a>
