Edit blockquote & pullquote templates

--- a/omni_blocks/templates/blocks/pull_quote_block.html
+++ b/omni_blocks/templates/blocks/pull_quote_block.html
@@ -1,1 +1,5 @@
-<blockquote class="pquote">{{ value|safe }}</blockquote>
+<blockquote class="pullquote">
+    <div class="blockquote__inner">
+        <p>{{ value|safe }}</p>
+    </div>
+</blockquote>
