Fixed failing test.

--- a/omni_blocks/templates/blocks/pull_quote_block.html
+++ b/omni_blocks/templates/blocks/pull_quote_block.html
@@ -1,5 +1,1 @@
-<blockquote class="pullquote">
-    <div class="blockquote__inner">
-        <p>{{ value|safe }}</p>
-    </div>
-</blockquote>
+<blockquote class="pullquote"><div class="blockquote__inner"><p>{{ value|safe }}</p></div></blockquote>
