--- a/omni_blocks/templates/blocks/quote_block.html
+++ b/omni_blocks/templates/blocks/quote_block.html
@@ -1,5 +1,1 @@
-<blockquote>
-    <div class="blockquote__inner">
-        <p>{{ value|safe }}</p>
-    </div>
-</blockquote>
+<blockquote><div class="blockquote__inner"><p>{{ value|safe }}</p></div></blockquote>
