--- a/omni_blocks/templates/blocks/google_map_block.html
+++ b/omni_blocks/templates/blocks/google_map_block.html
@@ -19,4 +19,4 @@
 	google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 
-<div id="google-map-{{ self.latitude }}{{ self.longitude }}" style="width:100%; height:380px;"></div>
+<div class="google-map" id="google-map-{{ self.latitude }}{{ self.longitude }}" style="width:100%; height:380px;"></div>
