--- a/omni_blocks/templates/blocks/page_chooser_block.html
+++ b/omni_blocks/templates/blocks/page_chooser_block.html
@@ -1,7 +1,7 @@
 {% load wagtailcore_tags %}
 
 <div>
-    <a href="{% pageurl self.page %}">
-        <h1>{{ self.page.title }}</h1>
+    <a href="{% pageurl page %}">
+        <h1>{{ page.title }}</h1>
     </a>
 </div>
