--- a/omni_blocks/templates/blocks/button_block.html
+++ b/omni_blocks/templates/blocks/button_block.html
@@ -1,4 +1,8 @@
 {% load wagtailcore_tags %}
-<p class="button">
-    <a href="{% include_block value.link %}">{{ value.title }}</a>
-</p>
+
+
+<div class="button_block">
+    <a
+    class="button__anchor"
+    href="{% include_block value.link %}">{{ value.title }}</a>
+</div><!-- .button_block -->
