--- a/omni_blocks/templates/blocks/flow_list_block.html
+++ b/omni_blocks/templates/blocks/flow_list_block.html
@@ -1,47 +1,36 @@
 {% load wagtailimages_tags %}
 
 
-<ul class="flow-list">
-
+<ul class="flow_block__list">
     {% for child in self %}
-
-        <li class="flow-block">
-
+        <li class="flow_block__item">
             {% if child.link %}
-                <a href="
-
+                <a
+                class="flow_block__anchor"
+                href="
                 {% if child.link.external_url %}
                     {{ child.link.external_url }}
                 {% else %}
                     {{ child.link.internal_url.url }}
                 {% endif %}
-
-                ">
+                "
+                aria-label="{{ child.title }}">
             {% endif %}
-
-            <h1 class="meta-title">{{ child.meta_title }}</h1>
-
-            <span>|</span>
-
+            <span class="flow_block__meta_title">{{ child.meta_title }}</span>
+            <span class="flow_block__meta_divider">|</span>
             {% if child.image %}
                 {% image child.image fill-300x300-c100 as im %}
-                <img src="{{ im.url }}" alt="" />
+                <img src="{{ im.url }}" {% if child.link %}alt="{{ im.alt }}"{% else %}alt=""{% endif %}>
             {% endif %}
-
             {% if child.title %}
-                <h2>{{ child.title }}</h2>
+                <h2 class="flow_block__title">{{ child.title }}</h2>
             {% endif %}
-
             {% if child.body %}
-                <p>{{ child.body }}</p>
+                <p class="flow_block__paragraph">{{ child.body }}</p>
             {% endif %}
-
             {% if child.link %}
-                </a>
+                </a><!-- .flow_block__anchor -->
             {% endif %}
-
-        </li>
-
+        </li><!-- .flow_block__item -->
     {% endfor %}
-
-</ul>
+</ul><!-- .flow_block__list -->
