--- a/omni_blocks/templates/blocks/google_map_block.html
+++ b/omni_blocks/templates/blocks/google_map_block.html
@@ -8,7 +8,7 @@
 	    mapTypeId: google.maps.MapTypeId.ROADMAP
 	  };
 	  var map=new google.maps.Map(
-	    document.getElementById("google-map-{{ self.latitude }}{{ self.longitude }}"),
+	    document.getElementById("google_map_{{ self.latitude }}{{ self.longitude }}"),
 	    mapProp
 	  );
 	  var marker = new google.maps.Marker({
@@ -19,4 +19,5 @@
 	google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 
-<div class="google-map" id="google-map-{{ self.latitude }}{{ self.longitude }}" style="width:100%; height:380px;"></div>
+<div class="google_map" id="google_map_{{ self.latitude }}{{ self.longitude }}">
+</div><!-- .google_map #google_map -->
