Markup related page block

--- a/omni_blocks/templates/blocks/page_chooser_block.html
+++ b/omni_blocks/templates/blocks/page_chooser_block.html
@@ -1,7 +1,17 @@
 {% load wagtailcore_tags %}
 
-<div>
-    <a href="{% pageurl page %}">
-        <h1>{{ page.title }}</h1>
-    </a>
-</div>
+
+<div class="page_chooser">
+    <a
+    class="page_chooser__anchor"
+    href="{% pageurl page %}">
+        {% if page.teaser_image %}
+            {% page.teaser_image fill-480x320-c100 as im %}
+            <img class="page_chooser__image" src="{{ im.url }}" alt="">
+        {% endif %}
+        <h1 class="page_chooser__title">{{ page.title }}</h1>
+        {% if page.teaser %}
+            <p class="page_chooser__teaser"></p>
+        {% endif %}
+    </a><!-- .page_chooser__anchor -->
+</div><!-- .page_chooser -->
