--- a/omni_blocks/templates/blocks/page_chooser_block.html
+++ b/omni_blocks/templates/blocks/page_chooser_block.html
@@ -11,7 +11,7 @@
         {% endif %}
         <h1 class="page_chooser__title">{{ page.title }}</h1>
         {% if page.teaser %}
-            <p class="page_chooser__teaser"></p>
+            <p class="page_chooser__teaser">{{ page.teaser }}</p>
         {% endif %}
     </a><!-- .page_chooser__anchor -->
 </div><!-- .page_chooser -->
