Edit markup in tests

--- a/omni_blocks/templates/blocks/pull_quote_block.html
+++ b/omni_blocks/templates/blocks/pull_quote_block.html
@@ -1,1 +1,5 @@
-<blockquote class="pullquote"><div class="pullquote__inner"><p class="pullquote__quote">{{ value|safe }}</p></div></blockquote>
+<blockquote class="pullquote">
+    <div class="pullquote__inner">
+        <p class="pullquote__quote">{{ value|safe }}</p>
+    </div><!-- .pullquote__inner -->
+</blockquote><!-- .pullquote -->
