--- a/omni_blocks/templates/blocks/quote_block.html
+++ b/omni_blocks/templates/blocks/quote_block.html
@@ -1,1 +1,5 @@
-<blockquote><div class="blockquote__inner"><p class="blockquote__quote">{{ value|safe }}</p></div></blockquote>
+<blockquote class="blockquote">
+    <div class="blockquote__inner">
+        <p class="blockquote__quote">{{ value|safe }}</p>
+    </div><!-- .blockquote__inner -->
+</blockquote><!-- .blockquote -->
