Edit markup whitespace to pass tests

--- a/omni_blocks/templates/blocks/button_block.html
+++ b/omni_blocks/templates/blocks/button_block.html
@@ -2,7 +2,5 @@
 
 
 <div class="button_block">
-    <a
-    class="button__anchor"
-    href="{% include_block value.link %}">{{ value.title }}</a>
+    <a class="button__anchor" href="{% include_block value.link %}">{{ value.title }}</a>
 </div><!-- .button_block -->
