--- a/omni_blocks/templates/blocks/linked_image_block.html
+++ b/omni_blocks/templates/blocks/linked_image_block.html
@@ -1,6 +1,4 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
 
-<a
-class="linked_image"
-href="{% include_block self.link %}">{% image self.image width-1600 %}</a>
+<a class="linked_image" href="{% include_block self.link %}">{% image self.image width-1600 %}</a>
