--- a/omni_blocks/templates/blocks/titled_link_block.html
+++ b/omni_blocks/templates/blocks/titled_link_block.html
@@ -1,6 +1,4 @@
 {% load wagtailcore_tags %}
 
 
-<a
-class="titled_link"
-href="{% include_block self.link %}">{{ self.title }}</a>
+<a class="titled_link" href="{% include_block self.link %}">{{ self.title }}</a>
