--- a/omni_blocks/templates/blocks/quote_block.html
+++ b/omni_blocks/templates/blocks/quote_block.html
@@ -1,5 +1,1 @@
-<blockquote class="blockquote">
-    <div class="blockquote__inner">
-        <p class="blockquote__quote">{{ value|safe }}</p>
-    </div><!-- .blockquote__inner -->
-</blockquote><!-- .blockquote -->
+<blockquote class="blockquote"><div class="blockquote__inner"><p class="blockquote__quote">{{ value|safe }}</p></div><!-- .blockquote__inner --></blockquote><!-- .blockquote -->
